--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/dazn/e2db338c-f534-4a0a-b324-b4fe0ab5f631'>DAZN - Senior Product Manager - Global Platform</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/meilleursagents/4fb9b62f-9cb3-478c-a5c7-d54d5af1d5a5'>MeilleursAgents - Product designer</a></h5> 
 <p><span class="badge badge-light">Ile de France</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -48,7 +52,7 @@
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/product/senior-group-product-manager-594480/?gh_src=82a8057f1'>Senior/Group Product Manager | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/product/senior-group-product-manager-594480/?gh_src=82a8057f1'>Senior/Group Product Manager | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -68,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/product/senior-group-product-manager-developer-platform-1829213/?gh_src=82a8057f1'>Senior/Group Product Manager, Developer Platform | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/product/senior-group-product-manager-developer-platform-1829213/?gh_src=82a8057f1'>Senior/Group Product Manager, Developer Platform | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -76,7 +80,7 @@
 <p><span class="badge badge-light">Aveiro, Portugal Porto, Portugal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934913'>Job Application for Product Owner at Fuze</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934913'>Job Application for Product Owner at Fuze</a></h5> 
 <p><span class="badge badge-light">Aveiro, Portugal Porto, Portugal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -96,7 +100,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -128,7 +132,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523382-iot-and-controls-product-manager'>Bosch Group IoT and Controls Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523382-iot-and-controls-product-manager'>Bosch Group IoT and Controls Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -218,7 +222,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/nl/o/product-manager-internship-rotterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/nl/o/product-manager-internship-rotterdam'>
       Product Manager Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -344,7 +348,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/indexexchange/jobs/1935295'>Job Application for Senior Product Manager at Index Exchange</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indexexchange/jobs/1935295'>Job Application for Senior Product Manager at Index Exchange</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -352,7 +356,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/2u/jobs/4480848002'>Job Application for Product Designer III at 2U</a></h5> 
+<h5><a href='https://boards.greenhouse.io/2u/jobs/4480848002'>Job Application for Product Designer III at 2U</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -376,7 +380,7 @@
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/product-manager-trust-safety/'>Product Manager - Trust &amp; Safety | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/product-manager-trust-safety/'>Product Manager - Trust &amp; Safety | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -448,10 +452,6 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://benefits-data-trust.breezy.hr/p/416668734da5-product-manager'>Product Manager at Benefits Data Trust</a></h5> 
-<p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
